--- a/src/main/resources/templates/staticCodeAnalysis/defaultConfigurationJava.json
+++ b/src/main/resources/templates/staticCodeAnalysis/defaultConfigurationJava.json
@@ -4,28 +4,24 @@
         {
             "name": "Bad Practice",
             "state": "VISIBLE",
-            "penalty": 1,
-            "maxPenalty": 10,
+            "penalty": 0.5,
+            "maxPenalty": 5,
             "categoryMappings": [
                 {
                     "tool": "SPOTBUGS",
                     "category": "BAD_PRACTICE"
                 },
                 {
-                    "tool": "CHECKSTYLE",
-                    "category": "coding"
-                },
-                {
                     "tool": "PMD",
-                    "category": "best-practices"
+                    "category": "Best-Practices"
                 }
             ]
         },
         {
-            "name": "Styling",
-            "state": "INACTIVE",
-            "penalty": 0,
-            "maxPenalty": 0,
+            "name": "Code Style",
+            "state": "VISIBLE",
+            "penalty": 0.2,
+            "maxPenalty": 2,
             "categoryMappings": [
                 {
                     "tool": "SPOTBUGS",
@@ -33,12 +29,144 @@
                 },
                 {
                     "tool": "CHECKSTYLE",
-                    "category": "annotation"
+                    "category": "blocks"
                 },
                 {
                     "tool": "CHECKSTYLE",
-                    "category": "blocks"
+                    "category": "coding"
                 },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "modifier"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Code-Style"
+                }
+            ]
+        },
+        {
+            "name": "Potential Bugs",
+            "state": "VISIBLE",
+            "penalty": 0.5,
+            "maxPenalty": 5,
+            "categoryMappings": [
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "CORRECTNESS"
+                },
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "MT_CORRECTNESS"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Error Prone"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Multithreading"
+                }
+            ]
+        },
+        {
+            "name": "Security",
+            "state": "VISIBLE",
+            "penalty": 2.5,
+            "maxPenalty": 10,
+            "categoryMappings": [
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "MALICIOUS_CODE"
+                },
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "SECURITY"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Security"
+                }
+            ]
+        },
+        {
+            "name": "Performance",
+            "state": "VISIBLE",
+            "penalty": 1,
+            "maxPenalty": 2,
+            "categoryMappings": [
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "PERFORMANCE"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Performance"
+                }
+            ]
+        },
+        {
+            "name": "Design",
+            "state": "VISIBLE",
+            "penalty": 5,
+            "maxPenalty": 5,
+            "categoryMappings": [
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "design"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Design"
+                }
+            ]
+        },
+        {
+            "name": "Code Metrics",
+            "state": "INACTIVE",
+            "penalty": 0,
+            "maxPenalty": 0,
+            "categoryMappings": [
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "metrics"
+                },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "sizes"
+                }
+            ]
+        },
+        {
+            "name": "Documentation",
+            "state": "INACTIVE",
+            "penalty": 0,
+            "maxPenalty": 0,
+            "categoryMappings": [
+                {
+                    "tool": "SPOTBUGS",
+                    "category": "I18N"
+                },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "javadoc"
+                },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "annotation"
+                },
+                {
+                    "tool": "PMD",
+                    "category": "Documentation"
+                }
+            ]
+        },
+        {
+            "name": "Naming & Formatting",
+            "state": "INACTIVE",
+            "penalty": 0,
+            "maxPenalty": 0,
+            "categoryMappings": [
                 {
                     "tool": "CHECKSTYLE",
                     "category": "imports"
@@ -49,23 +177,47 @@
                 },
                 {
                     "tool": "CHECKSTYLE",
-                    "category": "metrics"
-                },
-                {
-                    "tool": "CHECKSTYLE",
-                    "category": "modifier"
-                },
-                {
-                    "tool": "CHECKSTYLE",
-                    "category": "sizes"
+                    "category": "naming"
                 },
                 {
                     "tool": "CHECKSTYLE",
                     "category": "whitespaces"
+                }
+            ]
+        },
+        {
+            "name": "Naming & Formatting",
+            "state": "INACTIVE",
+            "penalty": 0,
+            "maxPenalty": 0,
+            "categoryMappings": [
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "imports"
                 },
                 {
-                    "tool": "PMD",
-                    "category": "code-style"
+                    "tool": "CHECKSTYLE",
+                    "category": "indentation"
+                },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "naming"
+                },
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "whitespaces"
+                }
+            ]
+        },
+        {
+            "name": "Miscellaneous",
+            "state": "INACTIVE",
+            "penalty": 0,
+            "maxPenalty": 0,
+            "categoryMappings": [
+                {
+                    "tool": "CHECKSTYLE",
+                    "category": "miscellaneous"
                 }
             ]
         }
